@@ -633,6 +633,7 @@ int main(int argc, char *argv[])
 	} else if ((do_login_ret == -1) && !connections)
 		show_login();
 
+	new_conversation("nobody");
 	gtk_main();
 
 #endif /* USE_APPLET */
